Adding Custom NotFoundExceptions and findById method to Categoria