@@ -1,9 +1,8 @@
 package br.com.alura.comex.exception;
 
-import br.com.alura.comex.dto.ValidationError;
+import br.com.alura.comex.dto.GenericApiError;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.MessageSource;
-import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseStatus;
@@ -11,7 +10,6 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
 import static org.springframework.context.i18n.LocaleContextHolder.getLocale;
 import static org.springframework.http.HttpStatus.BAD_REQUEST;
 
@@ -23,14 +21,18 @@ public class CustomHandlerAdvice {
 
     @ResponseStatus(BAD_REQUEST)
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    public List<ValidationError> handle(MethodArgumentNotValidException exception) {
+    public List<GenericApiError> handle(MethodArgumentNotValidException exception) {
         return exception
                 .getBindingResult()
                 .getFieldErrors()
                 .stream().map(fieldError -> {
                     String message = messageSource.getMessage(fieldError, getLocale());
-                    return new ValidationError(fieldError.getField(), message);
-                }).collect(toList());
+                    return GenericApiError
+                            .Builder()
+                            .erro(message)
+                            .campo(fieldError.getField())
+                            .build();
+                }).toList();
     }
 
 }
